@@ -2,13 +2,13 @@ package com.openclassrooms.mddapi.service;
 
 import com.openclassrooms.mddapi.dto.ThemeDTO;
 import com.openclassrooms.mddapi.mapper.ThemeMapper;
-import com.openclassrooms.mddapi.model.Theme;
 import com.openclassrooms.mddapi.repository.ThemeRepository;
 import lombok.Data;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Data
@@ -23,6 +23,6 @@ public class ThemeService {
     public List<ThemeDTO> findAllThemes() {
         return themeRepository.findAll()
                 .stream()
-                .map(themeMapper::toDTO).toList();
+                .map(themeMapper::toDTO).collect(Collectors.toList());
     }
 }
